# polymirror-copy-bot

./: .env  .gitignore  INSTALL.md  README.md  close_all.py  install.py  pyproject.toml  run_bot.py  run_dashboard.py  start.bat  start.sh
copypoly/: __init__.py  api.py  cli.py  config.py  dashboard.py  dashboard_html.py  executor.py  license.py  models.py  risk.py  runner.py  single_wallet_copier.py  state.py  watcher.py
pyarmor_runtime_000000/: __init__.py
pyarmor_runtime_000000/windows_x86_64/: pyarmor_runtime.pyd
