[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copypoly"
version = "0.1.0"
description = "Single-wallet Polymarket copy trading bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
live = [
    "py-clob-client-v2>=1.0.1",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.scripts]
copypoly = "copypoly.cli:main"

[tool.setuptools.packages.find]
include = ["copypoly*"]
